Tenta resolver requisitos faltantes - z-index e position

--- a/style.css
+++ b/style.css
@@ -12,11 +12,12 @@ h1 {
   border: 1px solid black;
   background-color: white;
   position: relative;
+  margin: auto;
   margin-top: 30px;
   display: block;
   z-index: -1;
-  height: 350px;
-  width: 350px;
+  height: 400px;
+  width: 400px;
   margin-left: 30px;
 }
 
@@ -55,10 +56,12 @@ h1 {
   font-weight: bold;
 }
 
-#memes {  
+#memes {
+  position: relative;
   margin: auto;
   margin-top: 30px;
   display: block;
+  z-index: 3;
 }
 
 #meme-1 , #meme-2 , #meme-3 , #meme-4 {
@@ -66,6 +69,7 @@ h1 {
   margin-left: 30px;
   height: 100px;
   width: 100px;
+  z-index: 4;
 }
 
 /* https://developer.mozilla.org/pt-BR/docs/Web/CSS/text-shadow */
@@ -74,8 +78,8 @@ h1 {
   font-size: 30px;
   text-shadow: 5px 5px 5px black;
   color: white;
-  top: 200px;
-  width: 100px;
+  top: 300px;
+  width: 400px;
   text-align: center;
   z-index: 2;
 }
@@ -83,7 +87,7 @@ h1 {
 #meme-image {
   object-fit: cover;
   position: relative;
-  width: 350px;
-  height: 350px;
+  width: 400px;
+  height: 400px;
   z-index: 1;
 }
